Merge pull request #7
* Update Javadoc

* Merge branch 'main' of github.com:mmc1234/jfreetype

* Update Javadoc

* Merge branch 'main' of github.com:mmc1234/jfreetype

* New Classes

* Merge branch 'main' of github.com:mmc1234/jfreetype

* New Classes

* New classes & Change file structure

* Revise names

* Merge branch 'main' of github.com:mmc1234/jfreetype

* Revise names

* Merge branch 'main' of github.com:mmc1234/jfreetype

* Add List

* Merge branch 'main' of github.com:mmc1234/jfreetype

* Add FTFace

* Merge branch 'main' of github.com:mmc1234/jfreetype

* Add FTFace

* Add FTFace

* Merge branch 'main' of github.com:mmc1234/jfreetype

* Merge branch 'main' of github.com:mmc1234/jfreetype

* Fix Memory Alignment & Beautify

* Fix: .gitignore

* Fix: .gitignore